Fix for hamubrger menu overlapping nav bar

--- a/style/megamenu.css
+++ b/style/megamenu.css
@@ -211,7 +211,7 @@ nav a:visited {
     }
 
     .mobile-menu-trigger {
-        background-image: url("/images/menu.png");
+        /*background-image: url("/images/menu.png");*/
     }
 
     .mobile-menu-header {
